# otus-cpp-template

./: .gitignore  .travis.yml  CMakeLists-GTest-Repo.txt.in  CMakeLists-GTest.cmake  CMakeLists.txt  lib.cpp  lib.hpp  main.cpp  tests_default.cpp
